[package]
name = "oc-export"
version = "0.1.0"
edition = "2021"
description = "Export OpenCode conversation histories to readable Markdown"
license = "0BSD"
authors = ["VivinMeth <iam@vivinmeth.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
indicatif = "0.17"
anyhow = "1"
