[package]
name = "oc-export"
version = "0.1.0"
edition = "2021"
description = "Export OpenCode conversation histories to readable Markdown"
license = "0BSD"
authors = ["VivinMeth <iam@vivinmeth.com>"]
repository = "https://github.com/vivinmeth/oc-export"
keywords = ["opencode", "export", "markdown", "conversation", "cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
